--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,8 +2,120 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>LSApplicationQueriesSchemes</key>
+    
+    <array>
+        
+        <!-- 微信 URL Scheme 白名单-->
+        
+        <string>wechat</string>
+        
+        <string>weixin</string>
+        
+        <!-- 新浪微博 URL Scheme 白名单-->
+        
+        <string>sinaweibohd</string>
+        
+        <string>sinaweibo</string>
+        
+        <string>sinaweibosso</string>
+        
+        <string>weibosdk</string>
+        
+        <string>weibosdk2.5</string>
+        
+        <!-- QQ、Qzone URL Scheme 白名单-->
+        
+        <string>mqqapi</string>
+        
+        <string>mqq</string>
+        
+        <string>mqqOpensdkSSoLogin</string>
+        
+        <string>mqqconnect</string>
+        
+        <string>mqqopensdkdataline</string>
+        
+        <string>mqqopensdkgrouptribeshare</string>
+        
+        <string>mqqopensdkfriend</string>
+        
+        <string>mqqopensdkapi</string>
+        
+        <string>mqqopensdkapiV2</string>
+        
+        <string>mqqopensdkapiV3</string>
+        
+        <string>mqzoneopensdk</string>
+        
+        <string>wtloginmqq</string>
+        
+        <string>wtloginmqq2</string>
+        
+        <string>mqqwpa</string>
+        
+        <string>mqzone</string>
+        
+        <string>mqzonev2</string>
+        
+        <string>mqzoneshare</string>
+        
+        <string>wtloginqzone</string>
+        
+        <string>mqzonewx</string>
+        
+        <string>mqzoneopensdkapiV2</string>
+        
+        <string>mqzoneopensdkapi19</string>
+        
+        <string>mqzoneopensdkapi</string>
+        
+        <string>mqzoneopensdk</string>
+        
+        <!-- 支付宝  URL Scheme 白名单-->
+        
+        <string>alipay</string>
+        
+        <string>alipayshare</string>
+        
+    </array>
+    
+    <key>NSCameraUsageDescription</key>
+    <string>应用需要您的同意,才能访问相机</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>应用需要您的同意,才能访问位置</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>应用需要您的同意,才能访问麦克风</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>应用需要获得你的相册权限才能提供正常的服务</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>应用需要您的同意,才能访问相册</string>
+    
+    <key>LSRequiresIPhoneOS</key>
+    <true/>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
+    
+    
+    <key>NSCameraUsageDescription</key>
+    <string>The application needs your permission to access the camera</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>The application needs your permission to access the microphone</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>The application needs to get your album permissions to provide normal service</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>The application needs your permission to access the album</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>We use your location data to find medical facilities around you</string>
+	<key>io.flutter.embedded_views_preview</key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>Hi!Meals Meals Meals!</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
